fixed back to top button visibility

--- a/styles/master.css
+++ b/styles/master.css
@@ -91,7 +91,7 @@ nav {
 .nav-links {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .nav-links ul li {
@@ -124,7 +124,59 @@ nav {
     display: none;
   }
 }
+.sidebar {
+  position: fixed;
+  display: none;
+  backdrop-filter: blur(4px);
+  background-color: #d2865d;
+  padding-top: 2.9rem;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  width: 250px;
+  z-index: 8888;
+  transition: right 0.5s ease-in-out;
+  animation-duration: 0.5s;
+  box-shadow: 2px 3px 5px #a0a0a0;
+}
+.nav-links-mobile ul {
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  list-style: none;
+  font-size: x-large;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
 
+.nav-links-mobile a {
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  color: rgb(80, 74, 74);
+  padding: 10px;
+  width: auto;
+  transition: color 0.5s;
+}
+.nav-links-mobile li {
+  font-size: 22px;
+  margin: 15px;
+  width: 100%;
+  text-align: left;
+}
+h3 {
+  position: relative;
+  text-align: center;
+  color: #31363f;
+  font-size: 1.5rem;
+}
+.close-menu {
+  scale: 1.05;
+}
+.nav-links-mobile li :hover {
+  scale: 1.1;
+  color: rgb(180, 173, 173);
+}
 .container {
   margin-top: 3rem;
   padding: 1.5rem;
